fix: Increased large scrollbar width

--- a/packages/nc-gui/assets/style.scss
+++ b/packages/nc-gui/assets/style.scss
@@ -173,8 +173,8 @@ main {
   overflow-x: scroll;
 
   &::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 8px;
+    height: 8px;
   }
   &::-webkit-scrollbar-track-piece {
     width: 0px;
@@ -187,7 +187,7 @@ main {
     border-radius: 10px;
 
 
-    width: 6px;
+    width: 8px;
     @apply bg-gray-200;
   }
   &::-webkit-scrollbar-thumb:hover {
